--- a/app/views/login.html
+++ b/app/views/login.html
@@ -26,4 +26,5 @@
 		<input ng-model="usr.password" type="password" class="form-control">
 	</div>
 	<button type="submit" class="btn btn-default">Login</button>
+	<button class="btn btn-link">Forgot Password?</button>
 </form>
