--- a/app/views/profile_edit.html
+++ b/app/views/profile_edit.html
@@ -22,13 +22,21 @@
 	</alert>
 
 		<tab heading="Basic">
-			
-			<div class = "form-group">
+			<pre>{{user | json}}</pre>
+			<div class = "form-group" ng-if="isAdmin">
 				<label>Roles</label><br/>
 				<select ng-model="userRoles" class="form-control" multiple ng-change="saveRoles(userRoles)" ng-options="key as role for (key, role) in roles">
 				</select>
 			</div>
-			<div class = "form-group firstName">
+			<div class = "form-group">
+				<label>I am a {{user.roles[0] ? 'teacher' : ''}}</label><br/>
+				<select ng-model="user.roles" class="form-control" ng-change="saveRoles(userRoles)">
+					<option value = ""></option>
+					<option value = "0">Teacher</option>
+				</select>
+			</div>
+
+			<div class = "form-group firstName" ng-if="isAdmin">
 				<label>First Name</label><br>
 				<input type="text" class="form-control" ng-model="user.firstName" ng-change="user.$save()">
 			</div>
@@ -55,8 +63,10 @@
 					<option ng-repeat="r in races track by $index" value="{{$index}}">{{r | capitalizeFirst }}</option>
 				</select>
 			</div>
-			<label>Notes</label>
-			<notes notes="notes" can-add="true"></notes>			
+			<div ng-if="isAdmin">
+				<label>Notes</label>
+				<notes notes="notes" can-add="true"></notes>		
+			</div>	
 		</tab>
 
 		<tab heading="Personal">
@@ -88,7 +98,7 @@
 		</tab>
 
 		<tab heading="Work / Study">
-			<div class="checkbox">
+			<div class="checkbox" ng-if="isAdmin">
 				<label>
 					<input type="checkbox" ng-model="user.interviewed" ng-change="user.$save()"> Interviewed
 				</label>
