--- a/app/views/jobs.html
+++ b/app/views/jobs.html
@@ -1,11 +1,3 @@
-<div class="page-header col-lg-12 col-sm-12">
-	<h1>Jobs<button class="btn btn-primary pull-right" ng-click="addJob()" ng-if="isAdmin">New</button>
-	<!-- <button class="btn btn-link hideBtn" ng-class="{hidden: !hideFilters}" ng-click="hideFilters = hideFilters ? false : true" >Filters</button> -->
-
-</h1>
-
-</div>
-	<button class="btn btn-link hideBtn" ng-class="" style="margin:0; padding:0;" ng-click="showFilters = showFilters === true ? false : true;">Filters</button>
 <style>
 	.filterBar {
 		height:100%;	
@@ -50,23 +42,31 @@
 	
 
 </style>
+
+
+<div class="page-header col-lg-12 col-sm-12">
+	<h1>Jobs
+	<!-- <button class="btn btn-link hideBtn" ng-class="{hidden: !hideFilters}" ng-click="hideFilters = hideFilters ? false : true" >Filters</button> -->
+		<small class="pull-right">
+			<input type="text" ng-model="filterSearch" style="margin-right:10px;">
+			<button class="btn btn-primary pull-right" ng-click="addJob()" ng-if="isAdmin">New</button>
+		</small>
+	</h1>
+</div>
+	
+<!--button class="btn btn-link hideBtn" ng-cloak style="margin:0; padding:0;" ng-click="showFilters = showFilters === true ? false : true;">Filters</button-->
+
 <!-- filters -->
-
-<div class ="jobPageWrapper row">
-
-		
+<div class ="jobPageWrapper row">	
 
 	<div class = "filterBar col-sm-1 col-lg-2 col-md-1 col-xl-1" ng-class="{hidden: hideFilters, show: showFilters}">
 
+		<div class = "filterContent">
 
-		<div class = "filterContent" >
-
-
-
-			<div class="form-group">
+			<!--div class="form-group">
 				<label>Search</label><button class = "clearFilter btn-link btn btn-xs pull-right" ng-click="filterSearch = undefined">clear</button>
 				<input type="text" class="form-control" ng-model="filterSearch" placeholder="Search">
-			</div>
+			</div-->
 			<div class = "form-group filter-age">
 				<label>Ages</label><button class = "clearFilter btn-link btn btn-xs pull-right" ng-click="filterText.age = undefined">clear</button>
 				<select ng-model="filterText.age" class="reign-in form-control" ng-options="key as age for (key, age) in ages">			
@@ -99,17 +99,21 @@
 					Clear All
 				</button>
 <!-- 				<button class="btn btn-link hideBtn" ng-click="hideFilters = hideFilters ? false : true">Hide</button>
- -->			</div>
+ -->		</div>
 
 		</div>	
 
 	</div>
 
-	<div class = "job-results col-lg-10 col-xl-9 col-md-8 col-sm-9">
+
+
+	<div class = "job-results col-lg-8 col-xl-9 col-md-8 col-sm-9">
 		<div class = "resultsNum">Showing {{filteredJobs.length}} jobs</div>
 		<div class="job-directive" ng-repeat="(key, job) in (filteredJobs = (jobs | orderBy: groupBy | jobsFilter: filterText | filter: filterSearch))">
-			<!--ll-job job="job"></ll-job-->
 			<job-snapshot jobid="job.$id" admin="isAdmin"></job-snapshot>
+			<!--span ng-if="isAdmin">
+				<ll-delete item="job" collection="jobs"></ll-delete>
+			</span-->
 		</div>
 	</div>
 
