--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="jumbotron" id="front_jumbotron">
-  <h1><a href="#/jobs">Get me a job.</a></h1>
+  <h1><a href="#/jobs">Jobs</a></h1>
   <!--h1><a href="#/users">Show me teachers.</a></h1-->
-  <h1><a href="#/">Get me a teacher.</a></h1>
-</div>
+<!--   <h1><a href="#/">Get me a teacher.</a></h1>
+ --></div>
