--- a/app/views/profile_edit.html
+++ b/app/views/profile_edit.html
@@ -125,13 +125,12 @@
 			</div>			
 			<div class = "form-group" ng-if="user.cv">
 				<label>View CVs</label><br>
-				<a href="{{user.cv}}" target="blank_">Original CV</a>
+				<a href="{{cvref}}" target="blank_">Original CV</a>
+			</div>		
+			 <div class="form-group">
+				  <label>Upload New CV </label><br><small>can't exceeed 1 MB</small><br>
+				  <button class="button btn btn-default" ngf-select ngf-change="uploadResume($files)">Browse</button>		 
 			</div>
-			<div class = "form-group">
-				<label>Upload New CV</label><br>
-				<div class="button btn btn-default" ngf-select ngf-change="upload($files)">
-				Browse</div>
-			</div>	
 		</tab>		
 
 		<tab heading="Location">
