--- a/app/views/templates/jobApplicants.html
+++ b/app/views/templates/jobApplicants.html
@@ -20,7 +20,7 @@
 			<td>{{countries[a.country]}}</td>
 			<td><span am-time-ago="a.appliedTo[jobid].when"></span></td>
 			<td>
-				<a ng-if="a.cv" href="{{a.cv}}" target="blank_">CV</a>
+				<a ng-if="a.cv" href="{{a.getPathToCV()}}" target="blank_">CV</a>
 				<a ng-if="a.appliedTo[jobid].note" href="{{a.appliedTo[jobid].note}}" target="blank_">Cover Letter</a>
 				<!--button class="btn btn-xs" ng-click="deleteApplicant(a.$id, jobid)">delete</button-->
 				<!--button class="btn btn-xs btn-warning" ng-click="rejectApplicant($index)">Reject</button-->
